--- a/templates/index.html
+++ b/templates/index.html
@@ -68,7 +68,8 @@
         <a href="/daily" class="btn btn-success nav-btn">Daily Predictions</a>
       </div>
       <div class="mt-5">
-        <img src="/static/analysis.webp" alt="Statistical Analysis" class="analysis-img">
+        <!-- Image loaded from the static folder -->
+        <img src="/static/analysis.png" alt="Statistical Analysis" class="analysis-img">
         <p>Discover trends and insights with our comprehensive statistical analysis.</p>
       </div>
     </div>
